Created config file.

--- a/FrontEnd/tsconfig.json
+++ b/FrontEnd/tsconfig.json
@@ -23,7 +23,9 @@
       "ES2022",
       "dom"
     ],
-    "strictPropertyInitialization": false
+    "strictPropertyInitialization": false,
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
