--- a/FrontEnd/Dockerfile.dev
+++ b/FrontEnd/Dockerfile.dev
@@ -1,14 +1,6 @@
 FROM node:latest
-WORKDIR /
-
-COPY ./package.json ./FrontEnd
-
-COPY ../config.json ./
-
-RUN npm install
-
-COPY . ./FrontEnd
-
-WORKDIR /FrontEnd
-
+WORKDIR /app
+COPY ./package.json ./
+RUN npm i
+COPY . .
 CMD ["npm", "run", "start"]
