Front end needs newer version of npm.

--- a/FrontEnd/Dockerfile.dev
+++ b/FrontEnd/Dockerfile.dev
@@ -1,5 +1,5 @@
 FROM node:latest
-RUN npm install -g @angular/cli
+RUN npm install -g npm@9.6.7&&npm install -g @angular/cli
 WORKDIR /app
 COPY ./package.json ./
 RUN npm i
